Java Marine API release notes
Version @VERSION@ (b@BUILD_ID@)
<http://marineapi.sourceforge.net/>
Copyright (C) 2010-@YEAR@ Kimmo Tuukkanen <ktuukkan@users.sourceforge.net>

Pre-alpha preview release, not to be used in production. Major API changes may
be introduced in future versions. Released on @RELEASE_DATE@.

CHANGES

 * Bugfix in SentenceFactory, DPT parser was not automatically registered. 
 * Parsing methods in SentenceId now validate the given String before parsing the id.
  
NEW FEATURES
 
 * Added method for unregistering parsers in SentenceFactory.

KNOWN ISSUES
  
 * Position.distanceTo() may not produce correct results.
 