@@ -20,6 +20,8 @@
  */
 package net.sf.marineapi.nmea.parser;
 
+import java.text.DecimalFormat;
+import java.text.DecimalFormatSymbols;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -52,7 +54,7 @@ import net.sf.marineapi.nmea.sentence.TalkerId;
  * For more details, see <a
  * href="http://vancouver-webpages.com/peter/nmeafaq.txt">NMEA FAQ</a> by Peter
  * Bennett or <a href="http://gpsd.berlios.de/NMEA.txt">NMEA Revealed</a> by
- * Eric S. Raymond. The Java Marine API is based mostly on these documents.
+ * Eric S. Raymond. Java Marine API is based mostly on these documents.
  * 
  * @author Kimmo Tuukkanen
  * @version $Revision$
@@ -365,14 +367,50 @@ public class SentenceParser implements Sentence {
     }
 
     /**
-     * Set double value in specified field.
+     * Set double value in specified field. Value is set "as-is" without any formatting
+     * or rounding.
      * 
      * @param index Field index
      * @param value Value to set
+     * @see #setDoubleValue(int, double, int, int)
      */
     protected final void setDoubleValue(int index, double value) {
-        // TODO add support for rounding to defined decimal precision
         setStringValue(index, String.valueOf(value));
+    }
+    
+    /**
+     * Set double value in specified field, with given number of digits before and after
+     * the decimal separator ('.'). When necessary, the value is padded with leading zeros
+     * and/or rounded to meet the requested number of digits.
+     * 
+     * @param index Field index
+     * @param value Value to set
+     * @param leading Number of digits before decimal separator
+     * @param decimals Maximum number of digits after decimal separator
+     * @see #setDoubleValue(int, double)
+     */
+    protected final void setDoubleValue(int index, double value, int leading, int decimals) {
+    	
+    	StringBuilder pattern = new StringBuilder();
+    	for(int i=0; i < leading; i++) {
+    		pattern.append('0');
+    	}
+    	if(decimals > 0) {
+    		pattern.append('.');
+    		for(int i=0; i < decimals; i++) {
+    			pattern.append('0');
+    		}
+    	}
+    	if(pattern.length() == 0) {
+    		pattern.append('0');
+    	}
+    	
+    	DecimalFormat nf = new DecimalFormat(pattern.toString());
+        DecimalFormatSymbols dfs = new DecimalFormatSymbols();
+        dfs.setDecimalSeparator('.');
+        nf.setDecimalFormatSymbols(dfs);
+        
+        setStringValue(index, nf.format(value));
     }
 
     /**
@@ -383,6 +421,22 @@ public class SentenceParser implements Sentence {
      */
     protected final void setIntValue(int index, int value) {
         setStringValue(index, String.valueOf(value));
+    }
+    
+    /**
+     * Set integer value in specified field, with specified minimum number of
+     * digits. Leading zeros are added to value if when necessary.
+     * 
+     * @param index Field index
+     * @param value Value to set
+     * @param leading Number of digits to use.
+     */
+    protected final void setIntValue(int index, int value, int leading) {
+    	String pattern = "%d";
+    	if(leading > 0) {
+    		pattern = "%0" + leading + "d";
+    	}
+        setStringValue(index, String.format(pattern, value));
     }
 
     /**
@@ -429,38 +483,4 @@ public class SentenceParser implements Sentence {
         fields.clear();
         fields = temp;
     }
-
-    // /**
-    // * Parses the sentence Id of specified NMEA sentence.
-    // *
-    // * @param nmea NMEA 0183 sentence String
-    // * @return SentenceId Sentence ID of the specified sentence
-    // */
-    // static SentenceId parseSentenceId(String nmea) {
-    // SentenceId id = null;
-    // String sid = nmea.substring(3, 6);
-    // try {
-    // id = SentenceId.valueOf(sid);
-    // } catch (Exception ex) {
-    // String msg = String.format("Unsupported sentence Id [%s]", sid);
-    // throw new IllegalArgumentException(msg, ex);
-    // }
-    // return id;
-    // }
-    //
-    // /**
-    // * Parses the talker Id of specified NMEA sentence.
-    // *
-    // * @param nmea NMEA 0183 sentence String
-    // * @return TalkerId Talker ID of the specified sentence
-    // */
-    // static TalkerId parseTalkerId(String nmea) {
-    // String tid = nmea.substring(1, 3);
-    // try {
-    // return TalkerId.valueOf(tid);
-    // } catch (Exception ex) {
-    // String msg = String.format("Unsupported talker Id [%s]", tid);
-    // throw new IllegalArgumentException(msg, ex);
-    // }
-    // }
 }
